--- a/templates/dispatch_list.html
+++ b/templates/dispatch_list.html
@@ -11,7 +11,7 @@
 		div#map{height:500px}
     div#container{
 			height:100%;
-			position: sticky;
+			position: fixed;
 		}
 </style>
 <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=otOdjVKhA3mDttoGqsaDlyuP">
@@ -48,7 +48,7 @@
 	function createMap(){
 	var map = new BMap.Map("container");//在百度地图容器中创建一个地图
 	var point = new BMap.Point(location_x,location_y);//定义一个中心点坐标
-	map.centerAndZoom(point,20);//设定地图的中心点和坐标并将地图显示在地图容器中
+	map.centerAndZoom(point,18);//设定地图的中心点和坐标并将地图显示在地图容器中
 	window.map = map;//将map变量存储在全局
 	var marker = new BMap.Marker(point);  // 创建标注
 	window.map.addOverlay(marker);
@@ -74,12 +74,14 @@ function updateLocation(){
 	else {
 			sign = 1
 	}
-	location_x = location_x + Math.random()*0.0001*sign
-	location_y = location_y + Math.random()*0.0001*sign
+	location_x = location_x + Math.random()*0.0002*sign
+	location_y = location_y + Math.random()*0.0002*sign
 	var new_point = new BMap.Point(location_x,location_y);
-	var marker = new BMap.Marker(new_point);
+	//http://pic21.nipic.com/20120605/544441_111229298154_2.jpg
+	var myIcon = new BMap.Icon("http://developer.baidu.com/map/jsdemo/img/fox.gif", new BMap.Size(200,100));
+	var marker = new BMap.Marker(new_point,{icon:myIcon});
 	window.map.addOverlay(marker);              // 将标注添加到地图中
-	marker.setLabel(new BMap.Label("me",{offset:new BMap.Size(20,-10)}));
+	marker.setLabel(new BMap.Label("me",{offset:new BMap.Size(100,50)}));
 	window.map.panTo(new_point);
 	ot = document.getElementById('ordertable')
 	data={};
@@ -104,8 +106,10 @@ function updateLocation(){
 								orderid = orders[parseInt(order)]['order_id']
 								table += "<div class='hovertable' latitude='"+
                                 orders[parseInt(order)]['latitude']+"' long='"+
-                                orders[parseInt(order)]['longitude']+"'rest_name='"+
-																orders[parseInt(order)]['restaurant_name']+
+                                orders[parseInt(order)]['longitude']+"' rest_name='"+
+																orders[parseInt(order)]['restaurant_name']+ "' rest_long='"+
+																orders[parseInt(order)]['rest_longitude']+"' rest_lat='"+
+																orders[parseInt(order)]['rest_latitude']+
                                 "'><table class='table' ><thead><tr><th>订单信息</th>"+
 								'<th>信息</th></tr></thead><tbody><tr><td>订单号</td><td>'+orders[parseInt(order)]["order_id"]+'</td>'+
 	            '</tr><tr><td>商家地址</td><td>'+orders[parseInt(order)]["rest_address"]+'</td></tr><tr><td>商家完成时间</td>'+
@@ -122,12 +126,22 @@ function updateLocation(){
                         $(".hovertable").mouseover(function(){
                             latitude = $(this).attr('latitude')
                             longtitude = $(this).attr('long')
-														rest_name = $(this).attr('rest_name')//.toString()
-                            console.log(latitude, longtitude,rest_name)
+														rest_name = $(this).attr('rest_name')
+														rest_lat = $(this).attr('rest_lat')
+														rest_long = $(this).attr('rest_long')
+                            console.log(latitude, longtitude,rest_name);
+														console.log(rest_lat,rest_long);
 														var new_point = new BMap.Point(longtitude,latitude);
 														var marker = new BMap.Marker(new_point);
 														window.map.addOverlay(marker);
-														marker.setLabel(new BMap.Label(rest_name,{offset:new BMap.Size(20,-10)}));
+														marker.setLabel(new BMap.Label("送达目的地",{offset:new BMap.Size(20,-10)}));
+														marker.setAnimation(BMAP_ANIMATION_BOUNCE); //跳动的动画
+
+														var rest_point = new BMap.Point(rest_long,rest_lat);
+														var rest_marker = new BMap.Marker(rest_point);
+														window.map.addOverlay(rest_marker);
+														rest_marker.setLabel(new BMap.Label(rest_name,{offset:new BMap.Size(20,-10)}));
+
 													//	window.setTimeout(func(){
 														/*var allOverlay = map.getOverlays();
 														for (var i = 0; i < allOverlay.length -1; i++){
@@ -180,7 +194,7 @@ function updateLocation(){
 	map.addControl(ctrl_sca);
 	}
 	initMap();//创建和初始化地图
-	window.setInterval("updateLocation();",1000)
+	window.setInterval("updateLocation();",2000)
 	/*var map = new BMap.Map("container");          // 创建地图实例
 	var point = new BMap.Point(121, 31);  // 创建点坐标
 	map.centerAndZoom(point, 15);                 // 初始化地图，设置中心点坐标和地图级别
