--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 {% block title %} Hackathon {% endblock %}
 
 {% block navbar %}
+<body background="img/bg.jpg">
 <div class="navbar navbar-inverse" role="navigation">
     <div class="container">
         <div class="navbar-header">
@@ -59,7 +60,7 @@
 
 {% block page_content %}{% endblock %}
 </div>
-
+</body>
 {% block scripts %}
 {{  super() }}
 {{ moment.include_moment() }}
